# pydev

./: README.md  pyproject.toml
examples/: sketch.yaml
pydev/: cli.py  sketch_dir.py
tests/: test_pydev.py
